test/files/pos/t2726/t2726_2.scala
object SQuery2Test {
  new SQLBuilder
}
