test/files/neg/macro-deprecate-dont-touch-backquotedidents/Macros_Object_7.scala
object Test7 {
  object `macro`
}
